--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,8 +13,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.3",
-    "styled-components": "^5.3.11",
-    "web-vitals": "^2.1.4"
+    "styled-components": "^5.3.11"
   },
   "scripts": {
     "start": "react-scripts start",
